[gd_scene load_steps=2 format=3 uid="uid://pvk4gf0edgs8"]

[ext_resource type="Script" path="res://src/gamemodes/ffa/ffa.gd" id="1"]

[node name="FFA" type="Node"]
script = ExtResource("1")

[node name="GameTimer" type="Timer" parent="."]

[node name="GameEndBannerTimer" type="Timer" parent="."]

[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
[connection signal="timeout" from="GameEndBannerTimer" to="." method="_on_GameEndBannerTimer_timeout"]
